# TestingRepo

./: README.md  database.sqlite  database.sqlite-shm  database.sqlite-wal  run
react/: package.json
react/src/: Router.tsx
react/src/components/: nav.tsx
react/src/pages/: Chat.tsx  Friends.tsx
react/src/test/: Router.test.tsx
rocket/: .env  .gitignore  Cargo.toml
rocket/src/: database.rs  logger.rs  main.rs  security.rs  user.rs
rocket/src/controller/: mod.rs  user.rs
rocket/src/model/: mod.rs  user.rs
rocket/src/tests/: user.rs
rust/: Cargo.toml
